# pupper-app

./: .gitignore  README.md  app.py  dogtest.txt  main.py  messy-dog-data.txt  pyproject.toml  test-dog-info.txt  update_sentiment.py
backend/: BEDROCK_VALIDATION_README.md  test_bedrock_simple.py  test_bedrock_validation.py  test_single_validation.py
backend/app/: .gitignore  bedrock_validator.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  test_main.py
backend/events/: event_processor.py
cdk_pupper/: backend_stack.py  cdk_pupper_stack.py  database_stack.py  frontend_stack.py  network_stack.py  storage_stack.py
pupper-frontend/: index.html  package.json
pupper-frontend/src/: App.css  App.tsx
pupper-frontend/src/components/: CreateDog.tsx  CreateDogShelter.tsx  DogDetail.tsx  DogMatcher.tsx  ExtractText.tsx  Home.test.tsx  Home.tsx  MyDogs.tsx  TextExtraction.tsx
pupper-frontend/src/types/: Dog.ts
tests/: test_cdk_stacks.py
tests/unit/: test_cdk_pupper_stack.py
