[project]
name = "cdk-pupper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib==2.201.0",
    "boto3>=1.39.1",
    "cdk-nag>=2.36.31",
    "constructs>=10.0.0,<11.0.0",
    "fastapi>=0.115.14",
    "mangum>=0.19.0",
    "pip>=25.1.1",
]

[dependency-groups]
dev = [
    "pytest==6.2.5",
]
