[project]
name = "cdk-pupper"
version = "0.1.0"
description = "CDK infrastructure for Pupper app"
requires-python = ">=3.8"
dependencies = [
    "aws-cdk-lib>=2.0.0",
    "constructs>=10.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cdk_pupper*"]
exclude = ["backend*", "pupper-frontend*"]